# 2023

./: CMakeLists.txt  README.md
benchmark/: =1.0  experiments.yml
include/sms/auxiliary/: graphs.hpp  mst_heuristic.hpp
include/sms/probdata/: mc_rooted.hpp
include/sms/solver/: basic_ocw.hpp  partition_solver.hpp
src/auxiliary/: cl_parser.cpp  graphs.cpp  io.cpp  mst_heuristic.cpp  scip.cpp
src/branch/: branchrule_degree.cpp  branchrule_nm.cpp  branchrule_pscost.cpp
src/conshdlr/: conshdlr_holes.cpp  conshdlr_oscw.cpp  conshdlr_triangles.cpp
src/conshdlr/test/: CMakeLists.txt
src/eventhdlr/: eventhdlr_root.cpp
src/mains/: main.cpp
src/probdata/: mc_rooted.cpp
src/solver/: basic_ocw.cpp
test/data/: be120_3_1.mc  be120_3_1.sol.json  be120_3_10.mc  be120_3_10.sol.json  be120_3_2.mc  be120_3_2.sol.json  be120_3_3.mc  be120_3_3.sol.json  be120_3_4.mc  be120_3_4.sol.json  be120_3_5.sol.json  be120_3_6.mc  be120_3_6.sol.json  be120_3_7.mc  be120_3_7.sol.json  be120_3_8.mc  be120_3_8.sol.json  be120_3_9.mc  be120_3_9.sol.json  be250_1.mc  be250_1.sol.json  be250_2.mc  be250_2.sol.json  be250_3.sol.json  be250_4.mc  be250_4.sol.json  bqp250-1.mc  bqp250-1.sol.json  bqp250-2.mc  bqp250-2.sol.json  bqp250-3.sol.json  bqp250-4.mc  bqp250-4.sol.json  gka2c.mc  gka2c.sol.json  gka4d.sol.json  gka5c.mc  gka5c.sol.json  gka7a.mc  gka7a.sol.json  (+83 more)
